data/all_generated_tests/raw_wast_tests/call_MismanagementofBlockNesting_3461.wast
;; 10. **Interleaved Calls in Nested Control Structures**:     - **Test Description**: Create a combination of `if`, `loop`, and `block` nested together, each with interleaved calls affecting global states and the stack. Test the management of argument passing and return handling.     - **Constraint Checked**: Interleaving of control structures and function call management.     - **Relation to Mismanagement of Block Nesting**: Validates correct control flow and argument handling under complex interleaving scenarios.

(assert_invalid
 (module
  (global $g (mut i32) (i32.const 0))
  (func $test
   (block
    (loop
     (if (i32.const 1)
      (then
       (call $update_global)
       (call $simple)
      )
     )
    )
   )
  )
  (func $update_global
   (global.set $g (i32.add (global.get $g) (i32.const 1)))
  )
  (func $simple)
 ) 
 "type mismatch"
)